--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -3,7 +3,15 @@
     "composite": true,
     "module": "ESNext",
     "moduleResolution": "Node",
-    "lib": ["ES2020", "DOM", "DOM.Iterable","es5", "es6", "dom", "dom.iterable"],
+    "lib": [
+      "ES2020",
+      "DOM",
+      "DOM.Iterable",
+      "es5",
+      "es6",
+      "dom",
+      "dom.iterable"
+    ],
     "allowSyntheticDefaultImports": true
   },
   "include": ["vite.config.ts"]
