--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-hook-form": "^7.45.4",
     "react-router-dom": "^6.15.0",
     "react-scrollbars-custom": "^4.1.1",
-    "react-toastify": "^9.1.3"
+    "react-toastify": "^9.1.3",
+    "vite-plugin-pwa": "^0.16.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
